deployment/ponto-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ponto-api
  labels:
    app: ponto-api
spec:
  template:
    metadata:
      name: ponto-api
      labels:
        app: ponto-api
    spec:
      containers:
        - name: ponto-api
          image: geter/ponto-api-techchallenge38:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /ponto-api-volume
              name: ponto-api-volume
      volumes:
        - name: ponto-api-volume
          hostPath:
            path: /home/ponto-api-volume
            type: DirectoryOrCreate
      serviceAccountName: ponto-api-serviceaccount
  replicas: 1
  selector:
    matchLabels:
      app: ponto-api
